tests/baselines/reference/es6ImportDefaultBindingNoDefaultProperty.errors.txt
tests/cases/compiler/es6ImportDefaultBindingNoDefaultProperty_1.ts(1,8): error TS1189: External module '"tests/cases/compiler/es6ImportDefaultBindingNoDefaultProperty_0"' has no default export or export assignment.


==== tests/cases/compiler/es6ImportDefaultBindingNoDefaultProperty_0.ts (0 errors) ====
    
    export var a = 10;
    
==== tests/cases/compiler/es6ImportDefaultBindingNoDefaultProperty_1.ts (1 errors) ====
    import defaultBinding from "es6ImportDefaultBindingNoDefaultProperty_0";
           ~~~~~~~~~~~~~~
!!! error TS1189: External module '"tests/cases/compiler/es6ImportDefaultBindingNoDefaultProperty_0"' has no default export or export assignment.
    